--- a/doki-server/webapp/src/app/app.component.html
+++ b/doki-server/webapp/src/app/app.component.html
@@ -1,4 +1,18 @@
 
+<ul ngbNav #nav="ngbNav" class="nav-tabs">
+  <li ngbNavItem>
+    <a ngbNavLink>First</a>
+    <ng-template ngbNavContent>
 
+    </ng-template>
+  </li>
+  <li ngbNavItem>
+    <a ngbNavLink>Second</a>
+    <ng-template ngbNavContent>
+
+    </ng-template>
+  </li>
+</ul>
+<div [ngbNavOutlet]="nav"></div>
 
 <router-outlet></router-outlet>
