formatted, links added

--- a/doki-server/webapp/src/app/app.component.html
+++ b/doki-server/webapp/src/app/app.component.html
@@ -1,7 +1,18 @@
 
 <nav aria-label="breadcrumb">
   <ol class="breadcrumb">
-    <li class="breadcrumb-item active" aria-current="page">Doki</li>
+    <li class="breadcrumb-item" aria-current="page">
+      <a><fa-icon [icon]="faGlasses"></fa-icon>&nbsp;Doki</a>
+    </li>
+    <li class="breadcrumb-item" aria-current="page">
+      <a><fa-icon [icon]="faCode"></fa-icon>&nbsp;Kroki</a>
+    </li>
+    <li class="breadcrumb-item" aria-current="page">
+      <a><fa-icon [icon]="faChartBar"></fa-icon>&nbsp;JMH Results</a>
+    </li>
+    <li class="breadcrumb-item active" aria-current="page">
+      <fa-icon [icon]="faStopWatch"></fa-icon>&nbsp;blah
+    </li>
   </ol>
 </nav>
 
