new components added

--- a/doki-server/webapp/src/app/app.component.html
+++ b/doki-server/webapp/src/app/app.component.html
@@ -1,5 +1,5 @@
 
-<nav aria-label="breadcrumb">
+<nav>
   <ol class="breadcrumb">
     <li class="breadcrumb-item" aria-current="page">
       <a><fa-icon [icon]="faGlasses"></fa-icon>&nbsp;Doki</a>
@@ -12,6 +12,10 @@
     </li>
     <li class="breadcrumb-item active" aria-current="page">
       <fa-icon [icon]="faStopWatch"></fa-icon>&nbsp;blah
+    </li>
+
+    <li class="ml-auto" aria-current="page">
+      <input id="typeahead-basic" type="text" class="form-control" placeholder="Search"/>
     </li>
   </ol>
 </nav>
