--- a/doki-server/webapp/src/app/startpage/startpage.component.html
+++ b/doki-server/webapp/src/app/startpage/startpage.component.html
@@ -1,1 +1,10 @@
-<p>startpage works!</p>
+
+<p class="text-left">
+  Doki is a site to host benchmark and test results.
+</p>
+
+<p class="text-left">
+  Number of projects served: <b>{{totalProjects}}</b>
+</p>
+
+<button type="button" class="btn btn-primary" routerLink="new-project">Register new project</button>
