quarkus upgrade, exception mappers

--- a/doki-server/webapp/src/app/app.component.html
+++ b/doki-server/webapp/src/app/app.component.html
@@ -22,3 +22,35 @@
 
 <router-outlet></router-outlet>
 
+<footer class="pt-4 my-md-5 pt-md-5 border-top">
+  <div class="row">
+    <div class="col-12 col-md">
+    </div>
+    <div class="col-6 col-md">
+      <h5>Resources</h5>
+      <ul>
+        <li>
+          <a href="/api-doc/">API</a>
+        </li>
+        <li>
+          <a href="https://github.com/K0zka/doki">source code</a>
+        </li>
+      </ul>
+
+    </div>
+    <div class="col-2 col-sm">
+      <h5>Support</h5>
+      <ul>
+        <li>
+          <a href="https://github.com/K0zka/doki/issues">bugtracker</a>
+        </li>
+        <li>
+          <a href="">documentation</a>
+        </li>
+      </ul>
+  </div>
+
+  </div>
+
+
+</footer>
