half-finished new project screen

--- a/doki-server/webapp/src/app/app.component.html
+++ b/doki-server/webapp/src/app/app.component.html
@@ -20,7 +20,9 @@
   </ol>
 </nav>
 
-<router-outlet></router-outlet>
+<div class="container">
+  <router-outlet></router-outlet>
+</div>
 
 <footer class="pt-4 my-md-5 pt-md-5 border-top">
   <div class="row">
