--- a/doki-server/webapp/src/app/app.component.html
+++ b/doki-server/webapp/src/app/app.component.html
@@ -2,16 +2,16 @@
 <nav>
   <ol class="breadcrumb">
     <li class="breadcrumb-item" aria-current="page">
-      <a><fa-icon [icon]="faGlasses"></fa-icon>&nbsp;Doki</a>
+      <a routerLink="/"><fa-icon [icon]="faGlasses"></fa-icon>&nbsp;Doki</a>
     </li>
     <li class="breadcrumb-item" aria-current="page">
-      <a><fa-icon [icon]="faCode"></fa-icon>&nbsp;Kroki</a>
+      <a routerLink="/projects/kroki"><fa-icon [icon]="faCode"></fa-icon>&nbsp;Kroki</a>
     </li>
     <li class="breadcrumb-item" aria-current="page">
-      <a><fa-icon [icon]="faChartBar"></fa-icon>&nbsp;JMH Results</a>
+      <a routerLink="/projects/kroki/jmh"><fa-icon [icon]="faChartBar"></fa-icon>&nbsp;JMH Results</a>
     </li>
     <li class="breadcrumb-item active" aria-current="page">
-      <fa-icon [icon]="faStopWatch"></fa-icon>&nbsp;blah
+      <a routerLink="/projects/kroki/jmh/com.foo.bar.BlahBenchmark"><fa-icon [icon]="faStopWatch"></fa-icon>&nbsp;blah</a>
     </li>
 
     <li class="ml-auto" aria-current="page">
